-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.1
-
msvc2019 x64
-
-
8
-
720304f70315dcf051c2eba6f48ddf1329419547 (qt/qtbase/5.15)
-
Qt6_Foundation_Sprint 22
QJsonObject::fromVariantMap seems to cause the ulonglong values from the variant map appear signed within the resulting json object. In contrast the ulonglong value can be inserted into a QJsonObject pretty much any other way and it'll remain unsigned.
This problem does not appear at least in Qt 5.14.0, Qt 5.12.9 or Qt 5.12.5.
Steps to reproduce the issue:
- Run the attached project